[metadata]
name = arduino-simple-rpc
version = 0.0.1
description = Simple RPC implementation for Arduino.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = jlaros@fixedpoint.nl
url = https://github.com/jfjlaros/simpleRPC
keywords =
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
copyright = 2018

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configparser
    pyserial

[options.package_data]
simple_rpc = setup.cfg

[options.entry_points]
console_scripts =
    simple_rpc = simple_rpc.cli:main
